<resources>
    <string name="app_name">JMExchange</string>

    <string name="exchange_rate_calculation">환율 계산</string>
    <string name="remittance_country">송금국가 :</string>
    <string name="remittance_country_value">미국(USD)</string>
    <string name="recipient_country">수취국가 :</string>
    <string name="exchange_rate">환율 :</string>
    <string name="lookup_time">조회시간 :</string>
    <string name="remittance_amount">송금액 :</string>
    <string name="remittance_amount_unit">USD</string>
    <string formatted="false" name="exchange_rate_value">%s / USD</string>
    <string formatted="false" name="recipient_amount_value">수취금액은 %s 입니다</string>
    <string name="double_tab">뒤로 버튼을 한번 더 누르면 종료합니다.</string>
    <string name="not_straight_remittance_amount">송금액이 바르지 않습니다</string>

</resources>